# Coord

./: .gitignore  3D_plot_trial.py  Angles.csv  Angles.mat  Angles.xlsx  CN4_Angles.csv  Mission04 - [1]Extraction of cif files with a certain coordination number.py  Mission04 - [2]Extraction of cif files with certain occupancies.py  Mission04 - [3]Extraction of cif files with cation center.py  README.md  cifDic_process.py  cifDic_process_cn4_CHver.py  cifDic_process_cn6.py  cifDic_process_cn6_CHver.py  cn_kmean.py  cn_miner_linux.py  linux_softBV.x  pyproject.toml  pytest.ini  requirements.txt  robocrys.ipynb  softbv_angle.py  softbv_cifDic.py
.ipynb_checkpoints/: softbv_cifDic-checkpoint.ipynb
Attempt_neural_network/: CN4NN documented changes_03062021.xlsm  CN4NN documented changes_09062021.xlsm  CN4NN documented changes_10062021.xlsm  Mission05 - Neural Network.py  NNdata.csv  Neural_Network_SK.py  Neural_network_SK.py  Neural_network_SK_check.py
Kmean/: Angles.csv  Angles.mat  CN4_Angles_all_cat_12000.csv  PCA_Visual.m  computeCentroids.m  ex7.m  findClosestCentroids.m  pca.m  runkMeans.m  token.mat
MC_compare_2022/: CN_MC_compared_softBV_break.xlsx  CN_MC_compared_softBV_break_cal.xlsx  CN_MC_compared_softBV_con.xlsx  CN_by_material-coord.xlsx  cn_paramter_refiner_2022_break.py
Material-coord/: BV_cutoff_min_percent_variance.xlsx  Coordination numbers 09032021.xlsx  Results_for_ternary_sample.xlsx  Results_for_ternary_sample_cn425.xlsx  bv_cutoff_min_percent.xlsx  bv_cutoff_min_percent_70percent.xlsx  bv_cutoff_min_percent_80.xlsx  cation_score.xlsx  (+24 more)
(+9286 files in other folders)
