[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materialscoord"
version = "0.1.0"
description = "A toolkit for analyzing and classifying coordination environments in crystal structures."
authors = [
    { name = "Roy Dai" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0.0",
    "numpy>=1.18.0",
    "matplotlib>=3.2.0",
    "seaborn>=0.10.0",
    "scikit-learn>=0.23.0",
    "pymatgen>=2020.0.0",
    "ipyvolume>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
